<resources>
    <string name="app_name">StyleOmega</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_home">HomeActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="_94_76_1234567">+94 76 1234567</string>
    <string name="_94_11_9876543">+94 11 9876543</string>
    <string name="colombo_7">Colombo 7.</string>
    <string name="todo">TODO</string>
    <string name="todo1">TODO1</string>
    <string name="darmapala_mawatha">Darmapala Mawatha,</string>
    <string name="todo2">TODO2</string>
    <string name="todo3">TODO3</string>
    <string name="confirm_delevery_address">Confirm Delevery Address</string>
    <string name="use_default_address">Use Default Address</string>
    <string name="default_address_of_the_current_customer">default address of the current customer</string>
    <string name="enter_address">Enter Address</string>
    <string name="payment_method">Payment Method</string>
    <string name="card_no">Card No.</string>
    <string name="security_code">Security Code</string>
    <string name="rs_5760_00">5760.00</string>
    <string name="rs_300_00">300.00</string>
    <string name="items">Items(RS)</string>
    <string name="delevery_charges">Delevery Charges(Rs)</string>
    <string name="order_total">Order Total</string>
    <string name="textview">TextView</string>
    <string name="use_another_address">Use another address</string>

    <!-- TODO: Remove or change this placeholder text -->

    <string-array name="payment_type">
        <item>Credit card</item>
        <item>Debit card</item>
        <item>Pay pal</item>
        <item>Apple pay</item>
    </string-array>

</resources>
